tests/samples/negative/types/noncopy_vec_destroy_deep_without_destructor.ax
module noncopy_vec_destroy_deep_without_destructor;

import std.core.vec as vec;

noncopy struct Owner {
    value: i32;
}

fn main() -> i32 {
    var owners: vec::Vec<Owner> = vec::new<Owner>();
    var owner: Owner = Owner { value: 1 };
    owners.push(move(owner));
    owners.destroy_deep();
    return 0;
}
